--- a/src/app/tab-book/tab-book.page.html
+++ b/src/app/tab-book/tab-book.page.html
@@ -7,7 +7,7 @@
       <ion-title size="large">PDF Viewer</ion-title>
     </ion-toolbar>
   </ion-header>
-  <pinch-zoom>
+  <pinch-zoom *ngIf="pinchZoom">
     <pdf-viewer
       [fit-to-page]="true"
       [src]="pdf"
@@ -15,6 +15,13 @@
     >
     </pdf-viewer>
   </pinch-zoom>
+  <pdf-viewer
+    *ngIf="!pinchZoom"
+    [fit-to-page]="true"
+    [src]="pdf"
+    [(page)]="page"
+  >
+  </pdf-viewer>
   <overlay-pdf-bottom #seriesOverlay
     #chaptersOverlay
     (selectedItem)="selectChapterByIndex($event)"
